--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-cayman
 title: Strona Eli
 description: Bookmark this to keep an eye on my project updates!
